<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#329d92"
    tools:context=".RunFragment">

    <TableLayout
        android:id="@+id/myTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="79dp"
        android:background="@drawable/border"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="150dp"
            android:layout_height="47dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dataTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/Data"
                android:textAlignment="center"
                android:textSize="20sp"

                android:typeface="sans" />

            <TextView
                android:id="@+id/duracaoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/Duracao"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/distanciaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/Distancia"
                android:textSize="20sp"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal"
            android:minHeight="60sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/firstValueData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="10/01/2018"
                android:textAlignment="center"
                android:textSize="14sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/FirstValueDuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="30:05"
                android:textAlignment="center"
                android:textSize="14sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/firstValueDistance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="30km"
                android:textAlignment="center"
                android:textSize="14sp"
                android:typeface="sans" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal"
            android:minHeight="60sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/secondValueData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="02/01/2018"
                android:textAlignment="center"
                android:textSize="14sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/secondValueDuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="23:05"
                android:textAlignment="center"
                android:textSize="14sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/secondValueDistance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="15km"
                android:textAlignment="center"
                android:textSize="14sp"
                android:typeface="sans" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/plusButtonLine1"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/myTable"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/plusButtonLine2"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/myTable"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:text="+"
        android:textAlignment="center"
        android:textSize="30sp" />

</RelativeLayout>